updated IOTP01 based on first run in class. begin IOTP03

--- a/IOTP01/IOTP01.html
+++ b/IOTP01/IOTP01.html
@@ -147,6 +147,7 @@
 		<div id="Exercise01" class="collapse in  col-lg-12">
 
 			<ol>
+				<li>This work is done on the Raspberry Pi.</li>
 				<li>Locate a USB keyboard and mouse.
                     <br />
 					Plug them into available USB ports on the right side of the Pi at your station.<br />
@@ -188,15 +189,13 @@
 				<li>In the upper left corner, you will see the Raspberry Icon, aka 
                     &#39;Start Menu&#39;<br />
 					Click the Raspberry icon,<br />
-                    <img src="images/Raspberry.png" width="46" alt="Raspberry" class="img-responsive img-responsive" /><br />
+					<img src="images/Raspberry.png" width="46" alt="Raspberry" class="img-responsive img-responsive" /><br />
 					then view the menu.<br />
 				</li>
-				<li>
-					On the Desktop menu bar, click the Globe icon to the right of the Raspberry icon, to start the Google Chrome browswer.<br />
+				<li>On the Desktop menu bar, click the Globe icon to the right of the Raspberry icon, to start the Google Chrome browswer.<br />
 					Many people will use this computer, ensure that passwords are NOT being saved.
 				</li>
-				<li>
-					In Chrome, click the menu (right-end of toolbar) and choose &#39;Settings&#39;.
+				<li>In Chrome, click the menu (right-end of toolbar) and choose &#39;Settings&#39;.
 				</li>
 				<li>Under Autofill, Click Passwords, turn off &#39;Offer to save passwords&#39; and &#39;Auto Sign-in&#39;<br />
 					<a href="images/NoPasswords.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('images/NoPasswords.PNG' 'popup'); return false;">
@@ -223,6 +222,7 @@
 			</p>
 
 			<ol>
+				<li>This work is done on the Raspberry Pi.</li>
 				<li>On the Raspberry Pi open a terminal window.</li>
 
 				<li>In the Terminal window type <code>scrot -h</code><br />
@@ -269,10 +269,38 @@
 
 		<div id="Exercise03" class="collapse in  col-lg-12">
 			<p>
-				For this final Exercise read all of these instructions.<br />
-				You are submitting to the appropriate D2L Assignment folder a screen shot that documents your work.<br />
-				You can do this on your laptop, and use the Snipping Tool for screen shots, or do this on the Raspberry Pi and use <code>scrot -s</code><br />
-				<strong>But in either case open NotePad (PC) or&nbsp; on the Raspberry Pi go Menu&gt;Accessories&gt;Text Editor</strong><br />
+				This work is done on your laptop.<br />
+				For this Exercise read all of these instructions.<br />
+				You are submitting a screen shot to the appropriate D2L Assignment folder that documents your work.<br />
+				Use the Snipping Tool for screen shots<br />
+				Do not try this on the Raspberry Pi, as it will take a long time, and it may freeze up.<br />
+
+				<p>
+					The Raspberry Pi organization provides a lot of materials explaining what can be done with the Raspberry Pi single board computer.<br />
+					<a href="https://magpi.raspberrypi.com/books" class="bg-info text-white" target="_blank">Check out their books</a><br />
+					<br />
+					<a href="https://magpi.raspberrypi.com/issues" class="bg-info text-white" target="_blank">Check out their magazines</a><br />
+				</p>
+
+				<ol>
+					<li>Review &#39; <a href="https://magpi.raspberrypi.com/books/handbook-2022" class="bg-info text-white" target="_blank">The Official Raspberry Pi Handbook 2022</a> &#39;<br />
+						A .pdf copy is also available in the OneDrive/ReadOnly/IoT folder
+					</li>
+
+					<li>Pay particular attention to the &#39;Project Showcases&#39; and &#39;Maker Guides&#39; sections.
+					</li>
+
+					<li>Find and read an article of particular interest to you.
+					</li>
+
+					<li>Reflect on the benefits of using a Raspberry Pi to accomplish such a task, instead of a laptop or desktop computer.<br />
+						Consider cost.<br />
+						Consider what functions distinguish the Raspberry Pi from a laptop or desktop.
+					</li>
+				</ol>
+
+				<strong>Open NotePad </strong>
+				<br />
 				Enter your Name, Assignment 
             	(IOTP01) and date so that it is visible next to the article, as shown below:
 			</p>
@@ -282,38 +310,16 @@
 					<img src="images/MagScreenShot.PNG" width="300" alt="magazine article screen shot" class="img-responsive img-responsive" /></a>Figure 8-Article Screen Shot<br />
 			</p>
 
-			<p>
-				The Raspberry Pi organization provides a lot of materials explaining what can be done with the Raspberry Pi single board computer.<br />
-				<a href="https://magpi.raspberrypi.com/books" class="bg-info text-white" target="_blank">Check out their books</a><br />
-				<br />
-				<a href="https://magpi.raspberrypi.com/issues" class="bg-info text-white" target="_blank">Check out their magazines</a><br />
-			</p>
-
-			<ol>
-				<li>Review &#39; <a href="https://magpi.raspberrypi.com/books/handbook-2022" class="bg-info text-white" target="_blank">The Official Raspberry Pi Handbook 2022</a> &#39;<br />
-					A .pdf copy is also available in the OneDrive/ReadOnly/IoT folder
-				</li>
-
-				<li>Pay particular attention to the &#39;Project Showcases&#39; and &#39;Maker Guides&#39; sections.
-				</li>
-
-				<li>Find and read an article of particular interest to you.
-				</li>
-
-				<li>Reflect on the benefits of using a Raspberry Pi to accomplish such a task, instead of a laptop or desktop computer.<br />
-					Consider cost.<br />
-					Consider what functions distinguish the Raspberry Pi from a laptop or desktop.
-				</li>
-			</ol>
 
 			<p>
-				Use the scrot -s command to make a screenshot from the article you chose in The Official Raspberry Pi Handbook 2022.<br />
-				Then use the File Manager and navigate to the &#39;/home/pi&#39; folder to find your screen shot and rename it appropriately.<br />
+				Use the Snipping Tool to make a screenshot from the article you chose in The Official Raspberry Pi Handbook 2022.<br />
 			</p>
 		</div>
+
+
 		<div class="col-lg-12 text-primary">
 			<p>
-				(40) 1. On the Raspberry Pi, use the Chromium browser to <a href="https://winona.learn.minnstate.edu/" class="bg-info text-white" target="_blank">login to D2L</a>.<br />
+				(40) 1. On your laptop, <a href="https://winona.learn.minnstate.edu/" class="bg-info text-white" target="_blank">login to D2L</a>.<br />
 				Upload your screenshot to the &#39;IOTP01&#39; D2L Assignment Folder.
 			</p>
 			<hr />
@@ -332,6 +338,7 @@
 		<div id="Exercise04" class="collapse in  col-lg-12">
 
 			<p>
+				This work is done on your laptop in Visual Studio or Dream Weaver.<br />
 				Based on your experience in this exercise and what you just learned, develop a brief statement about the value of single board computer technology to organizations.<br />
 				Think about what type of problems these devices could solve, and would it be cost-effective?
 			</p>
