--- a/IOTP03/IOTP03.html
+++ b/IOTP03/IOTP03.html
@@ -24,7 +24,7 @@
 
         <input name="InstID" type="hidden" id="InstID" value="00617282">
 
-        <h1 class="text-center">Setting Up PuTTY on a Raspberry Pi</h1>
+        <h1 class="text-center">SSH-CLI Remote Control of a Raspberry Pi-Not Done Yet</h1>
 
 
         <!-- -start-Student, class and assignment information. Assignment hard-coded, other values from constants.js file-start -->
@@ -87,6 +87,7 @@
 
             <p>
                 <img src="putty.jpg" alt="PuTTY" class="img-responsive img-responsive" />PuTTY
+            	PgP-USE POWERSHELL AND SSH COMMAND
             </p>
 
             <p>
