Revised to use PowerShell/SSH instead of PuTTY, added resources on SSH

--- a/HomePage.html
+++ b/HomePage.html
@@ -145,7 +145,7 @@
 			<tr>
 				<td>3</td>
 				<td>&nbsp;</td>
-				<td><a href="IOTP03/IOTP03.html">IOTP03</a> -Raspberry Pi-TTY</td>
+				<td><a href="IOTP03/IOTP03.html">IOTP03</a> -Raspberry Pi-SSH</td>
 				<td>&nbsp;</td>
 			</tr>
 			<tr>
