--- a/IOTP01/IOTP01.html
+++ b/IOTP01/IOTP01.html
@@ -175,8 +175,8 @@
 
 				<li>In the upper right corner of the desktop click on VNC to display the IP address.<br />
 
-					<a href="images/Desktop.png" class="img-responsive img-rounded" target="popup" onclick="window.open('images/Desktop.png', 'popup'); return false;">
-						<img src="images/Desktop.png" width="300" alt="Raspberry Pi Desktop" class="img-responsive img-responsive" />
+					<a href="images/Desktop.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('images/Desktop.PNG', 'popup'); return false;">
+						<img src="images/Desktop.PNG" width="300" alt="Raspberry Pi Desktop" class="img-responsive img-responsive" />
 					</a>
 					<br />
 					Figure 3-Raspberry Pi Desktop<br />
