corrected password, added WSU Guest WiFi info

--- a/IOTP02/IOTP02.html
+++ b/IOTP02/IOTP02.html
@@ -209,6 +209,13 @@
 					Do NOT connect to the Warrior or Wazoo wireless networks.
 				</li>
 
+				<li>ONLY CONNECT TO WSU GUEST NETWORK!!!<br />
+					<a href="https://eprofessor.azurewebsites.net/HelpFiles/WSU_Guest_WiFi/GuestWiFi.html" class="bg-info text-white" target="_blank">FOLLOW THESE INSTRUCTIONS</a>
+					<br />
+					When prompted make a new account, supply bogus information and log in.<br />
+					<strong>Note: periodically you will need to open the Raspberry Pi browser to 'winona.edu' or other website, and repeat the WSU Guest Network login process.</strong>
+				</li>
+
 				<li>On the Raspberry Pi you MUST open the Chromium browser and verify that you can  reach a website such as:
 					<br />
 					<code>google.com</code><br />
@@ -229,7 +236,8 @@
 				<li>An Authenication dialog box will appear.<br />
 					Enter your username and password for the Raspberry Pi.<br />
 					username: pi<br />
-					password: <strong>MagicMirror%</strong><br />
+					password:<br />
+                    <h3><strong><code>W1n0nA</code></strong></h3>
 					Check the &#39;Remember password&#39; box.<br />
 					Click OK.<br />
 					<p>
