add requirement to show SSH running in PowerShell

--- a/IOTP03/IOTP03.html
+++ b/IOTP03/IOTP03.html
@@ -348,7 +348,7 @@
 
         <div id="UploadScreenShot" class="collapse in  col-lg-12">
             <p>
-                Submit to the appropriate D2L Assignment folder a screenshot that documents your work.<br />
+                Submit to the appropriate D2L Assignment folder a screenshot that documents your work, showing cmatrix running in a PowerShell ssh session.<br />
             </p>
             <br />
         </div>
