--- a/IOTP02/IOTP02.html
+++ b/IOTP02/IOTP02.html
@@ -237,7 +237,7 @@
 					Enter your username and password for the Raspberry Pi.<br />
 					username: pi<br />
 					password:<br />
-                    <h3><strong><code>W1n0nA</code></strong></h3>
+					<h3><strong><code>W1n0nA</code></strong></h3>
 					Check the &#39;Remember password&#39; box.<br />
 					Click OK.<br />
 					<p>
@@ -431,7 +431,7 @@
 			<div class="col-lg-12 text-primary">
 				(10) 3. Assignment submission<br />
 				<!-- Enter your answer in the VALUE field below   GROK -->
-				<input class="form-control" name="q3" type="text" id="q3" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder IOTP02.">
+				<input class="form-control" name="q3" type="text" id="q3" readonly="readonly" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder IOTP02.">
 				<hr />
 
 			</div>
