corrected html code error, use esc sequence

--- a/IOTB01/IOTB01.html
+++ b/IOTB01/IOTB01.html
@@ -88,8 +88,8 @@
             <p>
 					<img src="images/MicrobitLogo.png"  alt="micro:bit" class="img-responsive img-responsive" /><br /><br />
 
-                <a href="images/microbit-hardware-access.jpg" class="img-responsive img-rounded" target="popup" onclick="window.open('images/microbit-hardware-access.jpg', 'popup'); return false;">
-                    <img src="images/microbit-hardware-access.jpg" width="400" alt="micro:bit" class="img-responsive img-responsive" /></a>micro:bit Features
+                <abbr title="split screen synched"><a href="images/microbit-hardware-access.jpg" class="img-responsive img-rounded" target="popup" onclick="window.open('images/microbit-hardware-access.jpg', 'popup'); return false;">
+                    <img src="images/microbit-hardware-access.jpg" width="400" alt="micro:bit" class="img-responsive img-responsive" /></a></abbr>micro:bit Features
             </p>
 
 
@@ -160,8 +160,8 @@
                 <li>On your laptop, start mu.<br />
                     If a &#39;Select Mode&#39; window appears, choose &#39;BBC micro:bit&#39;, then press OK.<br />
                     <p>
-                        <a href="images/StartMu.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('images/StartMu.PNG', 'popup'); return false;">
-                            <img src="images/StartMu.PNG" width="300" alt="Mu Mode" class="img-responsive img-responsive" /></a>Choose Mu Mode
+                        <abbr title="split screen synched"><a href="images/StartMu.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('images/StartMu.PNG', 'popup'); return false;">
+                            <img src="images/StartMu.PNG" width="300" alt="Mu Mode" class="img-responsive img-responsive" /></a></abbr> Mu Mode
                     </p>
                 </li>
 
@@ -212,7 +212,7 @@
                     Copy it, and paste it into the Mu editor.<br />
                     Then make use of the toolbar buttons, such as &#39;Check&#39;, to verify your code before you flash (upload) the code to the micro:bit.<br />
                     <pre>
- # <-- this is a comment
+ # &lt;-- this is a comment
 
 # Write your code below :-)
 
@@ -248,10 +248,10 @@ display.scroll("WELCOME TO MIS!")
 
             <p>
                 Another hint: make use of the function syntax.<br />
-                <p>
+                
                     <a href="images/SyntaxChecker.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('images/SyntaxChecker.PNG', 'popup'); return false;">
                         <img src="images/SyntaxChecker.PNG" width="300" alt="Syntax Checker" class="img-responsive img-responsive" /></a>Syntax Checker
-                </p>
+                
             </p>
 
             <p>
